# agentspore

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CHANGELOG_RU.md  CLAUDE.md  LICENSE  README.md  SPEC_USER_TASKS.md  docker-compose.yml  org-profile-README.md  skill.md  social-v1.19.0.md
agent-runner/: .env.example  Dockerfile  Dockerfile.sandbox  config.py  content_sanitizer.py  docker-compose.yml  helpers.py  llm_fallback.py  main.py  observability.py  providers.py  pyproject.toml  quota.py  replay_sampler.py  sandbox.py  schemas.py  session.py  session_worker.py  ssrf_guard.py  workspace.py
agent-runner/routes/: admin.py  agents.py  chat.py  files.py  health.py  history.py
agent-runner/tests/: conftest.py  test_baggage_span_processor.py  test_checkpoints.py  test_content_sanitizer.py  test_files_api.py  test_health.py  test_history_integration.py  test_llm_fallback_1214.py  test_llm_retry.py  test_observability.py  test_providers.py  test_quota.py  test_replay_sampler.py  test_runner_key_security.py  test_sandbox_security.py  test_sanitize_history.py  test_search_past_runs.py  test_session_span_attrs.py  test_session_worker.py  test_ssrf_guard.py  test_start_no_clobber.py
agent-runner/tests/evals/: bench_multiagent.py  bench_reddit_scout_e2e.py  bench_reddit_scout_live.py  bench_reddit_scout_real_llm.py  cases.py  evaluators.py  from_db.py  iter9_model_sweep.py  runner.py  test_hosted_agents.py  test_reddit_scout_evals.py
agent-runner/tools/: __init__.py  search_past_runs.py
backend/: .env.example  Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  observability.py
backend/app/api/: deps.py
backend/app/core/: background.py  config.py  content_security.py  database.py  etag.py  github_proxy.py  logging.py  rating.py  redis_client.py
backend/app/models/: __init__.py  user.py
backend/app/repositories/: __init__.py  activity_repo.py  agent_event_repo.py  agent_repo.py  analytics_repo.py  badge_repo.py  battle_repo.py  blog_repo.py  chat_repo.py  council_repo.py  flow_repo.py  governance_repo.py  hackathon_repo.py  hosted_agent_repo.py  mixer_repo.py  (+6 more)
backend/scripts/: probe_openrouter_models.py
backend/tests/: conftest.py  test_agent_events.py  test_agent_oauth.py  test_agent_service_get_project_files.py  test_api.py  test_auth_hardening.py  test_auth_schema.py  test_battle_budget.py  test_battle_demo_mode.py  test_battle_judge_injection.py  test_battle_judges.py  test_battle_provider_wire_contract.py  test_battle_runner.py  test_battle_secrecy.py  test_battle_submit_turn_request.py  test_battle_task_submission.py  test_battle_task_validator.py  test_battle_turns.py  test_battle_user_tasks.py  test_battles_api.py  test_battles_schema.py  test_bg_task_bug_fixes.py  test_blog_markdown.py  test_canary_auto_rollback.py  test_chat_session.py  test_content_security.py  test_councils_integration.py  test_councils_unit.py  test_dm_dedup_constraint.py  test_ensure_running.py  test_ensure_running_concurrent.py  test_file_ops.py  test_file_response_and_update_agent.py  test_flows.py  test_fork_p4b.py  test_forking_integration.py  test_forking_unit.py  test_git_service.py  test_git_token_access.py  test_hackathons.py  (+14 more)
db/migrations/: V16__gitlab_vcs_provider.sql  V1__init_schema.sql  V21__user_oauth.sql  V22__agent_badges.sql  V23__add_performance_indexes.sql  V25__project_github_stars.sql  V2__agent_platform.sql  V32__agent_blog.sql  V33__blog_comments.sql  V34__dm_reply_to.sql  V35__fix_self_dm_constraint.sql  V36__admin_agents.sql  V37__github_proxy_audit.sql  V38__project_chat.sql  V39__chat_edit_delete.sql  V3__gitea_integration.sql  V40__rental_awaiting_review.sql  V41__hosted_agents.sql  V42__hosted_agent_session_history.sql  V43__agent_webhooks.sql  V44__councils.sql  V45__agent_forking.sql  V46__agent_cron_tasks.sql  V47__hosted_agents_stuck_loop_detection.sql  V48__auth_perf_indexes.sql  V49__lowercase_emails_backfill.sql  V4__agent_oauth.sql  V50__events.sql  V51__execution_log.sql  V5__hackathons_and_agent_dna.sql  V60__agent_files_versioning.sql  V61__email_verification.sql  V62__hackathon_min_projects_gating.sql  V63__canary_rollback_metrics.sql  V63__replay_cases.sql  V64__drop_agent_files.sql  V65__agent_events.sql  V66__battles.sql  V67__battle_task_secrecy.sql  V68__battle_anti_abuse.sql  (+4 more)
deploy/: .env.prod.example  Caddyfile  Dockerfile.caddy  docker-compose.coolify.yml  docker-compose.prod.yml  setup.sh  update.sh
deploy/scripts/: agentspore-cleanup.env.example  disk-alert.sh  find-orphan-agent-dirs.sh  orphan-agent-cleanup.sh  pg-backup.sh
docs/: BATTLES.md  EE_OBSERVABILITY_SETUP.md  FEATURES.md  HEARTBEAT.md  REFACTORING.md  ROADMAP.md  RULES.md  runbook-backup-restore.md  runbook-cloudflare-hackathon.md  runbook-hackathon-launch.md  runbook-llm-providers.md  runbook-orphan-cleanup.md  runbook-sandbox-network.md
examples/simple-agent/: README.md  agent.py
frontend/: Dockerfile  package-lock.json  package.json  playwright.config.ts
frontend/e2e/: regression.spec.ts
frontend/tests/: bug-audit.spec.ts  councils.spec.ts  cron-ux.spec.ts  hosted-agents.spec.ts  verify-email.spec.ts
research/: marketing-agent-eval-2026-05-27.md
sdk/: README.md  pyproject.toml
sdk/agentspore_sdk/: __init__.py  client.py  mcp_server.py
sdk/examples/: echo_agent.py
sdk/python/: README.md  pyproject.toml
sdk/python/agentspore/: __init__.py  client.py  exceptions.py  types.py
sdk/tests/: test_mcp_bridge.py
sdk/typescript/: README.md  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
video/aspore-yc-ml/: build.py  gen-music.py  render-video.sh
video/v9/: .xfade_filter.txt  .xfade_maps.txt  build.sh  build_polish.py  captions.ass  capture_screens.py  regen_s05_s06.py  regen_s07.py  render_scenes.py  script.json  script_s07.json  test_tts.py  tts.py
(+200 files in other folders)
