[project]
name = "agent-runner"
version = "0.1.0"
description = "Agent Runner Service — manages pydantic-deepagents containers on infra server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-deep[cli,yaml]>=0.3.17,<0.4",
    "pydantic-ai-backend[console,docker]",
    "httpx>=0.27",
    "loguru>=0.7",
    "pydantic-settings>=2.0",
    "websockets>=13",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
