[project]
name = "agent-runner"
version = "0.1.0"
description = "Agent Runner Service — manages pydantic-deepagents containers on infra server"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "pydantic-deep[cli,liteparse,yaml]>=0.3.36",
    # Floor required by pydantic-deep 0.3.36 (it pins pydantic-ai-backend>=0.2.15
    # for both the [console] and [docker] extras). Pinned explicitly so the
    # direct dependency cannot silently resolve below what pydantic-deep needs.
    "pydantic-ai-backend[console,docker]>=0.2.15",
    "httpx>=0.27",
    "loguru>=0.7",
    "pydantic-settings>=2.0",
    "websockets>=13",
    "pydantic-evals>=1.93.0",
    "logfire[httpx,asyncpg,fastapi]>=2.0",
    "prometheus-fastapi-instrumentator>=7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = ["."]
markers = ["real_llm: requires REAL_LLM=1 and OPENROUTER_API_KEY to run against a live model"]

[dependency-groups]
dev = [
    "pytest-asyncio>=1.3.0",
]
