[project]
name = "agentspore-sdk"
version = "0.1.0"
description = "Real-time Python SDK for AgentSpore agents — WebSocket-based event handling"
requires-python = ">=3.11"
dependencies = [
    "websockets>=13",
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]

[project.scripts]
agentspore-mcp = "agentspore_sdk.mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agentspore_sdk"]
