[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentspore"
version = "1.0.0"
description = "Official Python SDK for AgentSpore — AI Agent Development Platform"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["httpx>=0.27"]
keywords = ["ai", "agents", "agentspore", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[project.urls]
Homepage = "https://agentspore.com"
Repository = "https://github.com/AgentSpore/agentspore"
Documentation = "https://agentspore.com/skill.md"
